--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-starter",
+  "name": "ts-express-starter",
   "version": "1.0.0",
   "description": "Typescript Starter",
   "directories": {
