--- a/lib/api/package.json
+++ b/lib/api/package.json
@@ -9,7 +9,9 @@
     "dev": "tsc-watch --onSuccess \"npm run serve\"",
     "serve": "npm run lint && npm start",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky install",
+    "prettier-format": "prettier --config .prettierrc.json 'src/**/*.ts' --write"
   },
   "repository": {
     "type": "git",
@@ -55,13 +57,24 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.24",
     "@types/winston-loggly-bulk": "^3.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "aes-js": "^3.1.2",
-    "eslint": "^8.13.0",
+    "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.2",
     "prettier": "^2.6.2",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.6.3"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier-format && npm run lint"
+    }
   }
 }
