--- a/lib/api/.env.example
+++ b/lib/api/.env.example
@@ -28,9 +28,9 @@ LOG_LEVEL='debug'
 REQUEST_RESPONSE_ENCRYPTION=true
 
 # sms credentials
-TWILIO_ACCOUNT_SID=AC5a24a81be2921449435d95bb9990a9cf
-TWILIO_AUTH_TOKEN=416f7053683e1ccde8de6269c114f354
-TWILIO_PHONE_NUMBER='+18126152993'
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
 
 # Razorpay credentials
 RAZORPAY_KEY_ID=""
