--- a/lib/class-based/.env.example
+++ b/lib/class-based/.env.example
@@ -2,7 +2,7 @@
 PORT=4000
 
 # DATABASE
-MONGOOSE_URL=http://localhost:27017/testdb
+MONGOOSE_URL="mongodb+srv://parashuram:hWQBhbWjweh6kGp4G3zjegj8ks3J6dpG@dev-cluster.ovlqw.mongodb.net/localUserMs?retryWrites=true&w=majority"
 
 # TOKEN
 SECRET_KEY=secretKey
